--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      footer {
+        text-align: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: #4a4747bd;
+        color: white;
+        padding: 10px 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <footer>
+      <p>This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
+    </footer>
   </body>
 </html>
